# OpenCL-ICD-Loader

./: .gitignore  CMakeLists.txt  LICENSE.txt  OpenCL.def  OpenCL.rc  README.md  icd.c  icd.h  icd_dispatch.c  icd_dispatch.h  icd_exports.map  icd_linux.c  icd_windows.c  icd_windows_hkr.c  icd_windows_hkr.h
loader/: icd.h
loader/windows/: icd_windows_apppackage.cpp
test/driver_stub/: CMakeLists.txt  cl.c  cl_ext.c  cl_gl.c  icd.c
test/loader_test/: CMakeLists.txt  callbacks.c  icd_test_match.c  main.c  test_buffer_object.c  test_cl_runtime.c  test_clgl.c  test_create_calls.c  test_image_objects.c  test_kernel.c  test_platforms.c  test_program_objects.c  test_sampler_objects.c
test/platform/: CMakeLists.txt  icd_test_log.c
test_new/: CMakeLists.txt
test_new/loader/: context_tests.cpp  platform_tests.cpp
test_new/recorder/: CMakeLists.txt  api.cpp  api.h  api_generated.cpp  api_generated.h  dispatch.cpp  recorder.def  recorder.h
test_new/scripts/: gen_tester.py
